[gd_scene load_steps=4 format=3 uid="uid://c64nl2fkq45ge"]

[ext_resource type="Texture2D" uid="uid://cvxmf74b0c0f6" path="res://Assets/UI/IButtonKey.png" id="1_x74bt"]
[ext_resource type="Script" uid="uid://d3h26gew4rpfs" path="res://Scenes/UI/Reusables/AbilityInfoButton.gd" id="2_wlvad"]
[ext_resource type="Texture2D" uid="uid://btkuwvmqsv16" path="res://Assets/UI/TopButtonKey.png" id="3_wlvad"]

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
alignment = 2

[node name="OpenMenuLabel" type="Label" parent="."]
layout_mode = 2
theme_override_constants/outline_size = 6

[node name="AbilityInfoButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("1_x74bt")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("2_wlvad")
kbm_texture = ExtResource("1_x74bt")
controller_texture = ExtResource("3_wlvad")

[connection signal="mouse_entered" from="AbilityInfoButton" to="AbilityInfoButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AbilityInfoButton" to="AbilityInfoButton" method="_on_mouse_exited"]
[connection signal="pressed" from="AbilityInfoButton" to="AbilityInfoButton" method="_on_pressed"]
